package com.directi.training.ocp.exercise;

class TimeSlot extends Slot {

    @Override
    public boolean isFree() {
        // Implementation for checking if slot is free
        return false;
    }

    @Override
    public void markFree() {
        // Implementation for marking slot as free
    }

    @Override
    public void markBusy() {
        // Implementation for marking slot as busy
    }

}